--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada
                                     </h3>
                                     <p>
-                                        On the journey towards Statistics minor and AI specification, my passions and
+                                        On the journey towards an AI specification, my passions and
                                         interests always lead me engaging in new technologies, like cloud computing and
                                         machine learning.
                                     </p>
@@ -244,7 +244,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <div class="skills_block">
                             <h3 class="animated fadeInUp wow">Tensorflow Developer cert.</h3>
                             <p class="animated fadeInDown wow">
-                                By end of 2023
+                                Unknown
                             </p>
                         </div>
                     </div>
@@ -493,12 +493,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <h5>Data Analysis</h5>
                         </a>
                     </li>
-                    <!--
+
                     <li>
-                        <a class="" href="#" data-filter=".XCode">
-                            <h5>XCode</h5>
+                        <a class="" href="#" data-filter=".Nengo">
+                            <h5>Nengo</h5>
                         </a>
                     </li>
+                    <!--
                     <li>
                         <a class="" href="#" data-filter=".RL">
                             <h5>Reinforcement Learning</h5>
@@ -521,12 +522,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div class="isotope fadeInLeft animated wow grid" id="portfolio_wrapper">
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four RL isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/deepracer.png" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://github.com/codejedi-ai/Deepracer" class="fancybox">
+                    <a href="https://github.com/codejedi-ai/Deepracer" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/deepracer.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
                                 <h2>DeepRacer<span></span></h2>
                                 <p>
                                     1/18 scale racecar, utilized Python, OpenAI Gym, Tensorflow, Jupyter Notebook and
@@ -534,70 +536,135 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     for reward function and hyper-performance, implemented the K1999 algorithm
 
                                 </p>
-                            </a>
-                        </div>
-                    </figcaption>
+
+                            </div>
+                        </figcaption>
+                    </a>
                 </figure>
                 <!--/Portfolio Item -->
-
                 <!-- Portfolio Item-->
                 <figure class="portfolio-item one-four Python isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/chatbot.png" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
+                    <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/chatbot.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
                                 <h2>Discord chatbot <span></span></h2>
-                                <p> Developed with Python, utilized Tensorflow to construct a deeplearning neural
+                                <p>
+                                    Developed with Python, utilized Tensorflow to construct a deeplearning neural
                                     network and used bag
                                     of words for trainning, created intents can be used by the bot to determine the goal
-                                    of communication </p>
-                            </a>
-                        </div>
-                    </figcaption>
+                                    of communication
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
                 </figure>
                 <!--/Portfolio Item -->
-
-                <!-- Portfolio Item
-                <figure class="portfolio-item one-four ML isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/covid.jpeg" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://github.com/Darsboy/The-relationship-between-Covid-19-and-culture" class="fancybox">
-                                <h2>COVID <span>Stat</span></h2>
-                                <p>
-                                    Culture vs covid 19
-                                </p>
-                            </a>
+                <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
+                    <a href="vids/RNN.mp4" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/nengo/delay_network.png" alt="Portfolio 1" />
                         </div>
-                    </figcaption>
-                </figure>
--->
-                <!--/Portfolio Item-->
+                        <figcaption>
+                            <div>
 
+                                <h2>LMU <span>Unit</span></h2>
+                                <p>
+                                    Legendre Memory Unit Model
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
+                <!-- Portfolio Item -->
+                <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
+                    <a href="vids/RTRL.mp4" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/nengo/accumulator.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
+                                <h2>ONLINE <span>RL</span></h2>
+                                <p>
+                                    Utilzed the PES (Prescribed Error Sensitivity) learning rule to achieve Online Reinforcement Learning
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
+
+                <!--/Portfolio Item-->
+                <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
+                    <a href="vids/ParlovDog.mp4" class="fancybox">
+                        <div class="portfolio_img">
+                            <img src="img/nengo/classical_conditioning.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
+                                <h2>Pavlov's dog<span></span></h2>
+                                <p>
+                                    <!--
+                    This following model is a classical conditioning model, which simulates the behavior of Pavlov's dog.
+                    The unconditioned stimulus is the meat powder, the unconditioned response is the dog's salivation, the conditioned stimulus is the bell, and the ens_response is the dog's salivation.
+                    At first we trained the model with the bell and the meat powder, and then we only used the bell to stimulate the model.
+                    The model will respond to the bell, which is the conditioned response.
+                    Over time, the model will gradually lose its response to the bell, which is the extinction response.
+                -->
+                                    Utilizing Classical conditioning to simulate the behavior of Pavlov's dog
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
+                <!-- Portfolio Item -->
+                <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
+                    <a href="vids/segimg.mp4" class="nav-link">
+                        <div class="portfolio_img">
+                            <img src="" alt="wildryde" />
+                        </div>
+                        <figcaption>
+                            <div>
+
+                                <h2>Neuroaccumulator <span></span></h2>
+                                <p>
+                                    Accumulate-to-Threshold Decision Making Model with Nengo Neural Simulator
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
 
                 <!-- Portfolio Item-->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/wildrydes-architecture.jpeg" alt="wildryde" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="pdfs/WildRydeReport.pdf" class="nav-link">
+                    <a href="pdfs/WildRydeReport.pdf" class="nav-link">
+                        <div class="portfolio_img">
+                            <img src="img/wildrydes-architecture.jpeg" alt="wildryde" />
+                        </div>
+                        <figcaption>
+                            <div>
+
                                 <h2>Wild Rydes <span></span></h2>
                                 <p>
                                     SERVERLESS! Perform version control in the deployment code of static webpage,
                                     used AWS amplify to host the static webpage frontend and DynamoDB hold user data.
                                     Utilized tools: Codecommit, DynamoDB, Amplify, AWS CLI, AWS API gateway, Cognito
                                 </p>
-                            </a>
-                        </div>
-                    </figcaption>
+
+                            </div>
+                        </figcaption>
+                    </a>
                 </figure>
-                <!-- Portfolio Item -->
+
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
@@ -607,7 +674,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <div>
                             <a href="pdfs/DevSecOpsReport.pdf" class="nav-link">
                                 <h2>Trend Micro One</h2>
-                                <p> Security + DevOps. Used Trend Micro to add security checks and block targeted
+                                <p>
+                                    Security + DevOps. Used Trend Micro to add security checks and block targeted
                                     attacks on the site.
                                     It can visualise attacks in the cloud infrastructure.
 
@@ -617,7 +685,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
@@ -635,26 +702,22 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figcaption>
                 </figure>
                 <!--/Portfolio Item -->
-
-                <!-- Portfolio Item
-                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
-                    <div class="portfolio_img">
-                        <img src="img/devmlops.png" alt="Portfolio 1" />
-                    </div>
-                    <figcaption>
-                        <div>
-                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
-                                <h2>DEVMLOPS </h2>
-                                <p>
-                                    DevOps + Machine Learning
-                                </p>
-                            </a>
+                    <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
+                        <div class="portfolio_img">
+                            <img src="img/devmlops.png" alt="Portfolio 1" />
                         </div>
-                    </figcaption>
-                </figure>
--->
+                        <figcaption>
+                            <div>
+                                <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
+                                    <h2>DEVMLOPS </h2>
+                                    <p>
+                                        DevOps + Machine Learning
+                                    </p>
+                                </a>
+                            </div>
+                        </figcaption>
+                    </figure>
                 <!--/Portfolio Item -->
-
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four DA isotope-item effect-oscar">
                     <div class="portfolio_img">
