Removed python category, updated Cert, updated ???

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                         </li>
                                         <li class="points">
                                             Libraries: OpenCV, Tensorflow, PyTorch, Scikit-learn, Seaborn, Selenium,
-                                            Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym
+                                            Pandas, Numpy, MatplotLib, PyTorch, OpenAIGym, Nengo
                                         </li>
                                         <li class="points">
                                             DevOps: CI/CD, GitHub, CodeCommit, CodePipeline, Jenkins, Ansible, Docker,
@@ -242,9 +242,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <img src="img/tf_badge_cert_tf_certified_developer.png" alt="AWS-Developer" />
                         </div>
                         <div class="skills_block">
-                            <h3 class="animated fadeInUp wow">Tensorflow Developer cert.</h3>
+                            <h3 class="animated fadeInUp wow">Tensorflow Developer Cert.</h3>
                             <p class="animated fadeInDown wow">
-                                Unknown
+                                ?
                             </p>
                         </div>
                     </div>
@@ -301,7 +301,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                         <li><span class="causale"><img src="img/diamond.gif"><a
                                                     href="">  </a></span> </li>
                                         <li>
-                                            <p><small class="text-muted"> Sep.5 ~ Dec.22, 2023 (4 Months)</small></p>
+                                            <p><small class="text-muted"> May ~ Dec., 2024 (8 Months)</small></p>
                                         </li>
                                     </ul>
                                 </div>
@@ -474,6 +474,11 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
             <div id="filters" class="sixteen columns">
                 <ul class="clearfix">
                     <li>
+                        <a class="" href="#" data-filter=".Nengo">
+                            <h5>Nengo</h5>
+                        </a>
+                    </li>
+                    <li>
                         <a class="" href="#" data-filter=".AWS">
                             <h5>AWS workshop</h5>
                         </a>
@@ -484,19 +489,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </a>
                     </li>
                     <li>
-                        <a class="" href="#" data-filter=".Python">
-                            <h5>Python</h5>
-                        </a>
-                    </li>
-                    <li>
                         <a class="" href="#" data-filter=".DA">
                             <h5>Data Analysis</h5>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="" href="#" data-filter=".Nengo">
-                            <h5>Nengo</h5>
                         </a>
                     </li>
                     <!--
@@ -535,28 +529,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     AWS Sagemaker
                                     for reward function and hyper-performance, implemented the K1999 algorithm
 
-                                </p>
-
-                            </div>
-                        </figcaption>
-                    </a>
-                </figure>
-                <!--/Portfolio Item -->
-                <!-- Portfolio Item-->
-                <figure class="portfolio-item one-four Python isotope-item effect-oscar">
-                    <a href="https://github.com/leorfed/MLH-ChatBot" class="fancybox">
-                        <div class="portfolio_img">
-                            <img src="img/chatbot.png" alt="Portfolio 1" />
-                        </div>
-                        <figcaption>
-                            <div>
-
-                                <h2>Discord chatbot <span></span></h2>
-                                <p>
-                                    Developed with Python, utilized Tensorflow to construct a deeplearning neural
-                                    network and used bag
-                                    of words for trainning, created intents can be used by the bot to determine the goal
-                                    of communication
                                 </p>
 
                             </div>
