--- a/index.html
+++ b/index.html
@@ -475,12 +475,12 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <ul class="clearfix">
                     <li>
                         <a class="" href="#" data-filter=".Nengo">
-                            <h5>Nengo</h5>
+                            <h5>Neuroscience</h5>
                         </a>
                     </li>
                     <li>
                         <a class="" href="#" data-filter=".AWS">
-                            <h5>AWS workshop</h5>
+                            <h5>AWS</h5>
                         </a>
                     </li>
                     <li>
