--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
                         </a>
                     </div>
-            </div>
+                </div>
                 <!--due -->
                 <div class="row timeline-movement">
                     <div class="timeline-badge">
@@ -298,8 +298,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                     <ul class="timeline-panel-ul">
                                         <!---->
                                         <li><span class="importo">?</span></li>
-                                        <li><span class="causale"><img src="img/diamond.gif"><a
-                                                    href="">  </a></span> </li>
+                                        <li><span class="causale"><img src="img/diamond.gif"><a href=""> </a></span>
+                                        </li>
                                         <li>
                                             <p><small class="text-muted"> May ~ Dec., 2024 (8 Months)</small></p>
                                         </li>
@@ -310,7 +310,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                     </div>
                 </div>
-          
+
                 <!--due -->
                 <div class="row timeline-movement">
 
@@ -400,7 +400,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 -->
 
                 </div>
-                
+
                 <!--due -->
                 <div class="row timeline-movement">
 
@@ -473,7 +473,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
         <div class="portfolio">
             <div id="filters" class="sixteen columns">
                 <ul class="clearfix">
-                                        <li>
+                    <li>
                         <a id="all" href="#" data-filter="*" class="active">
                             <h5>All</h5>
                         </a>
@@ -484,28 +484,26 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </a>
                     </li>
                     <li>
+                        <a class="" href="#" data-filter=".RL">
+                            <h5>Reinforcement Learning</h5>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="" href="#" data-filter=".CV">
+                            <h5>Computer Vision</h5>
+                        </a>
+                    </li>
+                    <li>
                         <a class="" href="#" data-filter=".AWS">
                             <h5>AWS</h5>
                         </a>
                     </li>
-                    <li>
-                        <a class="" href="#" data-filter=".RL">
-                            <h5>Reinforcement Learning</h5>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="#" data-filter=".DA">
-                            <h5>Data Analysis</h5>
-                        </a>
-                    </li>
-                    <!--
-                    <li>
-                        <a class="" href="#" data-filter=".RL">
-                            <h5>Reinforcement Learning</h5>
-                        </a>
-                    </li>
-                    -->
 
+                    <li>
+                        <a class="" href="#" data-filter=".SWE">
+                            <h5>Software Developments</h5>
+                        </a>
+                    </li>
                     <li>
 
 
@@ -565,7 +563,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
 
                                 <h2>ONLINE <span>RL</span></h2>
                                 <p>
-                                    Utilzed the PES (Prescribed Error Sensitivity) learning rule to achieve Online Reinforcement Learning
+                                    Utilzed the PES (Prescribed Error Sensitivity) learning rule to achieve Online
+                                    Reinforcement Learning
                                 </p>
 
                             </div>
@@ -617,7 +616,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </a>
                 </figure>
 
-                <!-- Portfolio Item-->
+                <!-- Portfolio Item
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <a href="pdfs/WildRydeReport.pdf" class="nav-link">
                         <div class="portfolio_img">
@@ -637,8 +636,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </figcaption>
                     </a>
                 </figure>
-
-                <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/TrendMicroControlPanel.png" alt="Portfolio 1" />
@@ -657,8 +654,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                     </figcaption>
                 </figure>
-                <!--/Portfolio Item -->
-                <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
                         <img src="img/DevSecOps.JPG" alt="Portfolio 1" />
@@ -674,39 +669,39 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                     </figcaption>
                 </figure>
-                <!--/Portfolio Item -->
-                    <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
-                        <div class="portfolio_img">
-                            <img src="img/devmlops.png" alt="Portfolio 1" />
-                        </div>
-                        <figcaption>
-                            <div>
-                                <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/" class="nav-link">
-                                    <h2>DEVMLOPS </h2>
-                                    <p>
-                                        DevOps + Machine Learning
-                                    </p>
-                                </a>
-                            </div>
-                        </figcaption>
-                    </figure>
-                <!--/Portfolio Item -->
-                <!-- Portfolio Item -->
-                <figure class="portfolio-item one-four DA isotope-item effect-oscar">
+                <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <div class="portfolio_img">
-                        <img src="img/realestate.jpeg" alt="Portfolio 1" />
+                        <img src="img/devmlops.png" alt="Portfolio 1" />
                     </div>
                     <figcaption>
                         <div>
-                            <a href="https://github.com/codejedi-ai/Boston-House-Price-Analysis" class="nav-link">
-                                <h2>RealEstate</h2>
+                            <a href="https://catalog.us-east-1.prod.workshops.aws/v2/workshops/44d3e2a0-ec6f-44df-9397-bcfdf129cadf/en-US/"
+                                class="nav-link">
+                                <h2>DEVMLOPS </h2>
                                 <p>
-                                    Performing linear regression on housing data. Used Pandas to grab data
-                                    and used Seaborn to visualize, used Scikit learn to make machine learning model
+                                    DevOps + Machine Learning
                                 </p>
                             </a>
                         </div>
                     </figcaption>
+                </figure>
+            -->
+                <!-- Portfolio Item -->
+                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
+                    <a href="vids/Django_Object_detection_1.mp4" class="nav-link">
+                        <div class="portfolio_img">
+                            <img src="img/DJ+TF-obj-det.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
+
+                                <h2>Django + TF Hub: Object Detection</h2>
+                                <p>
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
                 </figure>
                 <!--/Portfolio Item -->
 
