resume names for projects

--- a/index.html
+++ b/index.html
@@ -155,12 +155,10 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                                 </div>
                                 <!-- /.col-md-6 -->
                                 <div class="col-md-6">
-                                    <h3>Majoring in Computer Science (2020-2025) at the University of Waterloo, Canada
+                                    <h3>Majoring in Computer Science with AI specialization (2020-2025) at the University of Waterloo, Canada
                                     </h3>
                                     <p>
-                                        On the journey towards an AI specification, my passions and
-                                        interests always lead me engaging in new technologies, like cloud computing and
-                                        machine learning.
+                                        Embarking on the sacred path to AI mastery, my passion and curiosity guide me through uncharted territories—exploring the vast realms of cloud computing, neuroscience, computer vision, and the evolving art of AI, akin to a wise seeker in the realm of knowledge.
                                     </p>
 
                                     <ul class="about-us-list">
@@ -484,11 +482,6 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </a>
                     </li>
                     <li>
-                        <a class="" href="#" data-filter=".AWS">
-                            <h5>AWS</h5>
-                        </a>
-                    </li>
-                    <li>
                         <a class="" href="#" data-filter=".RL">
                             <h5>Computer Vision</h5>
                         </a>
@@ -498,13 +491,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                             <h5>Software Developments</h5>
                         </a>
                     </li>
-                    <!--
+
                     <li>
                         <a class="" href="#" data-filter=".AWS">
                             <h5>AWS</h5>
                         </a>
                     </li>
-                    -->
+        
 
                     <li>
 
@@ -545,9 +538,8 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
 
-                                <h2>LMU <span>Unit</span></h2>
+                                <h2> Legendre Memory Unit (LMU) Model </h2>
                                 <p>
-                                    Legendre Memory Unit Model
                                 </p>
 
                             </div>
@@ -558,15 +550,13 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
                     <a href="vids/RTRL.mp4" class="fancybox">
                         <div class="portfolio_img">
-                            <img src="img/nengo/accumulator.png" alt="Portfolio 1" />
+                            <img src="img/nengo/RTRL.png" alt="Portfolio 1" />
                         </div>
                         <figcaption>
                             <div>
 
-                                <h2>ONLINE <span>RL</span></h2>
+                                <h2>Real-Time Online Learning with PES Rule</h2>
                                 <p>
-                                    Utilzed the PES (Prescribed Error Sensitivity) learning rule to achieve Online
-                                    Reinforcement Learning
                                 </p>
 
                             </div>
@@ -583,7 +573,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         <figcaption>
                             <div>
 
-                                <h2>Pavlov's dog<span></span></h2>
+                                <h2>Pavlov's Dog Conditional Stimulus Simulation </h2>
                                 <p>
                                     <!--
                     This following model is a classical conditioning model, which simulates the behavior of Pavlov's dog.
@@ -601,16 +591,16 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
-                    <a href="vids/segimg.mp4" class="nav-link">
+                    <a href="vids/RNN.mp4" class="nav-link">
                         <div class="portfolio_img">
-                            <img src="" alt="wildryde" />
+                            <img src="img/nengo/accumulator.png" alt="wildryde" />
                         </div>
                         <figcaption>
                             <div>
 
-                                <h2>Neuroaccumulator <span></span></h2>
+                                <h2>  Accumulate-to-Threshold Decision Making Model </h2>
                                 <p>
-                                    Accumulate-to-Threshold Decision Making Model with Nengo Neural Simulator
+                                
                                 </p>
 
                             </div>
