Fixed lableing problem

--- a/index.html
+++ b/index.html
@@ -483,15 +483,20 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </li>
                     <li>
                         <a class="" href="#" data-filter=".RL">
+                            <h5>Reinforcement Learning</h5>
+                        </a>
+                    </li>
+ 
+                    <li>
+                        <a class="" href="#" data-filter=".CV">
                             <h5>Computer Vision</h5>
                         </a>
                     </li>
                     <li>
-                        <a class="" href="#" data-filter=".CV">
+                        <a class="" href="#" data-filter=".SWE">
                             <h5>Software Developments</h5>
                         </a>
                     </li>
-
                     <li>
                         <a class="" href="#" data-filter=".AWS">
                             <h5>AWS</h5>
@@ -607,7 +612,22 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </figcaption>
                     </a>
                 </figure>
+                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
+                    <a href="vids/Django_Object_detection_1.mp4" class="nav-link">
+                        <div class="portfolio_img">
+                            <img src="img/DJ+TF-obj-det.png" alt="Portfolio 1" />
+                        </div>
+                        <figcaption>
+                            <div>
 
+                                <h2>Django + TF Hub: Object Detection</h2>
+                                <p>
+                                </p>
+
+                            </div>
+                        </figcaption>
+                    </a>
+                </figure>
                 <figure class="portfolio-item one-four AWS isotope-item effect-oscar">
                     <a href="pdfs/WildRydeReport.pdf" class="nav-link">
                         <div class="portfolio_img">
@@ -678,22 +698,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                     </figure>
                 <!--/Portfolio Item -->
                 <!-- Portfolio Item -->
-                <figure class="portfolio-item one-four CV isotope-item effect-oscar">
-                    <a href="vids/Django_Object_detection_1.mp4" class="nav-link">
-                        <div class="portfolio_img">
-                            <img src="img/DJ+TF-obj-det.png" alt="Portfolio 1" />
-                        </div>
-                        <figcaption>
-                            <div>
 
-                                <h2>Django + TF Hub: Object Detection</h2>
-                                <p>
-                                </p>
-
-                            </div>
-                        </figcaption>
-                    </a>
-                </figure>
                 <!--/Portfolio Item -->
 
             </div>
