Fixed RNN video in the LMU

--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!--/Portfolio Item -->
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
-                    <a href="vids/RNN.mp4" class="fancybox">
+                    <a href="vids/LMU.mp4" class="fancybox">
                         <div class="portfolio_img">
                             <img src="img/nengo/delay_network.png" alt="Portfolio 1" />
                         </div>
