--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                         <figcaption>
                             <div>
-                                <h2><span>Legendre Memory Unit (LMU) Model</span></h2>
+                                <h2><span>Panaloma</span></h2>
                                  <p>
 
                                 </p>
@@ -549,7 +549,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
-                    <a href="vids/RTRL.mp4" class="fancybox">
+                    <a href="vids/Real-Time Online Learning with PES Rule.mp4" class="fancybox">
                         <div class="portfolio_img">
                             <img src="img/nengo/RTRL.png" alt="Portfolio 1" />
                         </div>
@@ -584,7 +584,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                 </figure>
                 <!-- Portfolio Item -->
                 <figure class="portfolio-item one-four Nengo isotope-item effect-oscar">
-                    <a href="vids/RNN.mp4" class="nav-link">
+                    <a href="vids/Accumulate-to-Threshold Decision Making Model.mp4" class="nav-link">
                         <div class="portfolio_img">
                             <img src="img/nengo/accumulator.png" alt="wildryde" />
                         </div>
@@ -686,6 +686,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </figcaption>
                     </figure>
                 <!--/Portfolio Item -->
+
                 <!-- Portfolio Item -->
 
                 <!--/Portfolio Item -->
