Applied homographies using Scikit libraries to seamlessly stitch panoramic images.

--- a/index.html
+++ b/index.html
@@ -538,9 +538,9 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </div>
                         <figcaption>
                             <div>
-                                <h2><span>Panaloma</span></h2>
+                                <h2><span>Panoramic Image Stichingl</span></h2>
                                  <p>
-
+                                    Applied homographies using Scikit libraries to seamlessly stitch panoramic images.
                                 </p>
 
                             </div>
@@ -686,7 +686,7 @@ Licence: Creative Commons Attribution 3.0** - http://creativecommons.org/license
                         </figcaption>
                     </figure>
                 <!--/Portfolio Item -->
-
+                
                 <!-- Portfolio Item -->
 
                 <!--/Portfolio Item -->
